--- a/index.html
+++ b/index.html
@@ -52,7 +52,15 @@
                     </div>
                 </div>
             </div>
-            <!--            @todo Hamburger Button-->
+            <!--             Hamburger Button-->
+            <div class="md:hidden">
+                <button id="menu-btn" type="button"
+                        class="z-40 block hamburger md:hidden focus:outline-none">
+                    <span class="hamburger-top"></span>
+                    <span class="hamburger-middle"></span>
+                    <span class="hamburger-bottom"></span>
+                </button>
+            </div>
         </nav>
         <!--        @todo - Mobile Menu-->
         <div class="max-w-lg mt-32 mb-32 p-4 font-sans
